--- a/src/app/timeline.scss
+++ b/src/app/timeline.scss
@@ -124,19 +124,19 @@
 }
 
 .cbp_tmicon-phone:before{
-	content:"\f138";
+	content:"\f04b";
 }
 
 .cbp_tmicon-screen:before{
-	content:"\f138";
+	content:">";
 }
 
 .cbp_tmicon-mail:before{
-	content:"\f138";
+	content:"\f04b";
 }
 
 .cbp_tmicon-earth:before{
-	content:"\f138";
+	content:"\f04b";
 }
 
 @media screen and (max-width: 65.375em) {
