--- a/src/app/lesson-module/lesson-module.html
+++ b/src/app/lesson-module/lesson-module.html
@@ -1,14 +1,3 @@
-<div class="container">
-<div class="row">
-	<div class="col-md-7 center-block video-frame" style="float:none;"> 
-	<div class="embed-responsive embed-responsive-16by9">
-  		<iframe class="embed-responsive-item" src="//www.youtube.com/embed/AK6TulIASgQ?rel=0&showinfo=0"></iframe>
-	</div>
-	</div>
-</div>
-</div>
-
-
 <div class="container-fluid lesson-details" id="lesson-details">
 		<div class="container">
 		<div class="row head-row">
@@ -22,10 +11,10 @@
 			</div>
 			<div class="col-md-6" style="position: relative;min-height: 70px;">
 				<div class="btn-group" role="group" aria-label="..." style="position: absolute; bottom: 0; right:0;">
-					<button type="button" class="btn btn-default" style="border: none; border-bottom: 3px solid #B41734;border-radius: 0;background-color: #F7F7F7;">
-						<i class="fa fa-film" style="color: #B41734; font-size: 25px;"></i>
-					</button>
-					<a ng-href="{{'http://localhost:3000/courses/javaee_jaxrs/lessons/introduction/text'}}" type="button" class="btn btn-default" style="border: none;background-color: #F7F7F7;">Manuscript</a>
+					<a type="button" ng-href="{{'http://localhost:3000/courses/javaee_jaxrs/lessons/introduction'}}" class="btn btn-default" style="border: none; background-color: #F7F7F7;">
+						<i class="fa fa-film"></i>
+					</a>
+					<button type="button" class="btn btn-default" style="border: none;background-color: #F7F7F7;color: #B41734;border-bottom: 3px solid #B41734;border-radius: 0;">Manuscript</button>
 					<button type="button" class="btn btn-default" style="border: none;background-color: #F7F7F7;">Challenges</button>
 				</div>
 			</div>
