--- a/src/app/lesson-module/manuscript/manuscript.scss
+++ b/src/app/lesson-module/manuscript/manuscript.scss
@@ -1,6 +1,6 @@
 
 .manuscript {
-	max-width: 400px;
+	max-width: 35em;
 	margin: auto;
 	font-family: "Lora", serif;
 	font-size: 20px;
@@ -10,5 +10,3 @@
 		font-family: "Josefin Sans", sans-serif;
 	}
 }
-
-
