--- a/src/app/lessons/lessons.html
+++ b/src/app/lessons/lessons.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 	<div class="col-md-7 center-block video-frame" style="float:none;"> 
-	<div class="embed-responsive embed-responsive-16by9">
+	<div class="embed-responsive embed-responsive-16by9 embed">
   		<iframe class="embed-responsive-item" src="//www.youtube.com/embed/AK6TulIASgQ?rel=0&showinfo=0"></iframe>
 	</div>
 	</div>
@@ -12,7 +12,7 @@
 <div class="container-fluid lesson-details" id="lesson-details">
 		<div class="container">
 		<div class="row head-row">
-			<div class="col-md-6">
+			<div class="col-md-8 underline">
 				<h1>
 					<i class="fa fa-chevron-circle-left" style="font-size: 20px;color: #CACACA; margin-right: 5px"></i>
 					<span style="font-size: 25px; font-weight: 700;color: #B41734; margin-right: 5px;">1.2</span>
@@ -20,7 +20,7 @@
 					<i class="fa fa-chevron-circle-right" style="font-size: 20px;color: #CACACA; margin-left: 5px;"></i>
 				</h1>
 			</div>
-			<div class="col-md-6" style="position: relative;min-height: 70px;">
+			<div class="col-md-4 underline" style="position: relative;min-height: 70px;">
 				<div class="btn-group" role="group" aria-label="..." style="position: absolute; bottom: 0; right:0;">
 					<button type="button" class="btn btn-default" style="border: none; border-bottom: 3px solid #B41734;border-radius: 0;background-color: #F7F7F7;">
 						<i class="fa fa-film" style="color: #B41734; font-size: 25px;"></i>
