--- a/src/app/components/lesson-section/lesson-section.html
+++ b/src/app/components/lesson-section/lesson-section.html
@@ -3,26 +3,49 @@
 		<div class="row head-row">
 			<div class="col-md-8 underline">
 				<h1>
-					<i class="fa fa-chevron-circle-left" style="font-size: 20px;color: #CACACA; margin-right: 5px"></i>
-					<span style="font-size: 25px; font-weight: 700;color: #B41734; margin-right: 5px;">1.2</span>
-					<span>{{ctrl.lesson.title}}</span>
-					<i class="fa fa-chevron-circle-right" style="font-size: 20px;color: #CACACA; margin-left: 5px;"></i>
+					<a ng-if="ctrl.lesson.prevLessonPermalinkName" ng-href="{{ctrl.lesson.prevLessonPermalinkName}}">
+						<i class="fa fa-chevron-circle-left arrow"></i>
+					</a>
+					<span class="slNo" ng-bind="ctrl.lesson.unitSlNo"></span>
+					<span class="title" ng-bind="ctrl.lesson.title"></span>
+					<a ng-if="ctrl.lesson.nextLessonPermalinkName" ng-href="{{ctrl.lesson.nextLessonPermalinkName}}">
+						<i class="fa fa-chevron-circle-right arrow"></i>
+					</a>
 				</h1>
 			</div>
-			<div class="col-md-4 underline" style="position: relative;min-height: 70px;">
-				<div class="btn-group" role="group" aria-label="..." style="position: absolute; bottom: 0; right:0;">
-					<a type="button" ng-href="{{'http://localhost:3000/courses/javaee_jaxrs/lessons/introduction'}}" class="btn btn-default" style="border: none; background-color: #F7F7F7;">
-						<i class="fa fa-film"></i>
+			<div class="col-md-4 button-panel underline">
+				<div class="btn-group nav-button-group" role="group">
+					<a type="button" 
+						ng-href="{{ctrl.lesson.url}}" 
+						class="btn btn-default"
+						ng-class="{selected: ctrl.lesson.isSelected}">
+							<i class="fa fa-film"></i>
 					</a>
-					<a type="button" class="btn btn-default" 
-						style="border: none;background-color: #F7F7F7;color: #B41734;border-bottom: 3px solid #B41734;border-radius: 0;"
-						ng-repeat="section in this.lesson.sections">
+					<a type="button" 
+						class="btn btn-default" 
+						ng-repeat="section in ctrl.lesson.sections"
+						ng-href="{{section.url}}" 
+						ng-class="{selected: section.isSelected}"
+						>
 						{{ section.name }}
 						</a>
-					<a type="button" ng-href="{{'http://localhost:3000/courses/javaee_jaxrs/lessons/introduction/quiz'}}"  class="btn btn-default" style="border: none;background-color: #F7F7F7;">Challenges</a>
+					<!-- <a type="button" ng-href="{{'http://localhost:3000/courses/javaee_jaxrs/lessons/introduction/quiz'}}"  class="btn btn-default" style="border: none;background-color: #F7F7F7;">Challenges</a> -->
 				</div>
 			</div>
 		</div>
-		<p style="font-size: 18px; font-family: 'Lato'; margin-top: 15px; max-width: 70em;color: #64686a;">{{ctrl.lesson.description}}</p>
+		<div class="row">
+			<div class="col-md-8 padded" style="padding-left: 45px; border-right: 1px solid #aaa;">
+				<p class="link-subtitle">
+					<a href="#" ng-bind="::ctrl.lesson.courseCode" ng-href="/courses/{{::ctrl.lesson.courseCode}}"></a>
+				</p>
+				<p style="font-size: 18px; font-family: 'Lato'; margin-top: 15px; color: #64686a;">{{ctrl.lesson.description}}</p>
+			</div>
+			<!--
+			<div class="col-md-4 padded" >
+				<p style="font-size: 18px; font-family: 'Lato';  color: #64686a;">Sign in to save your progress</p>
+			</div>
+			-->
 		</div>
+		</div>
+		
 	</div>
