--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -22,6 +22,7 @@ $primary-red: #B41734;
 
 html {
    height: 100%;
+   min-width: 1000px;
 }
 
 body {
@@ -31,6 +32,11 @@ body {
   min-height: 100%;
   color: $primary-color;
   background-color: $plain-background;
+  
+}
+
+@media (max-width: 600px) {
+  body {min-width:1000px;}
 }
 
 a {
@@ -74,7 +80,7 @@ label.combo::before {
   width: 16px;
   border: 2px solid #3498db;
   border-radius: 100px;
-/*  transition: background-color .2s; */
+  transition: background-color .2s; 
 }
 
 label.check::before {
@@ -164,6 +170,20 @@ ul.pagination {
 .underline {
   border-bottom: 1px solid #CCCCCC;
 }
+
+.link-subtitle a {
+  color: $primary-red;
+  font-size: 16px;
+  font-family: "Montserrat",sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
+  
+}
+
+.padded {
+  padding: 20px;
+}
+
 
 /* End common across pages */
 
