--- a/src/app/lesson-module/quiz/quiz.html
+++ b/src/app/lesson-module/quiz/quiz.html
@@ -5,18 +5,22 @@
                 'correct': ctrl.isAnswerCorrect(q),
                 'incorrect': ctrl.isAnswerIncorrect(q),}" ng-click="ctrl.activateQuestion($index)">
             <span class="question-number-text">{{ $index + 1 }}</span>
-            <svg class="correct-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path></svg>
-            <svg class="incorrect-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path></svg>
+            <svg class="correct-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+            </svg>
+            <svg class="incorrect-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+            </svg>
           </li>
       </ol>
       <div class="yt-quiz-tabs pad-horizontal-long pad-top-long col-4-12 col-md-1">
-        <h2 class="yt-quiz-title gutter-bottom-heading">Check your knowledge</h2>
+        <h2 class="yt-quiz-title gutter-bottom-heading">Exercise</h2>
         <div class="yt-quiz-question-text-list">
           <div class="yt-quiz-question-text yt-card-text" 
                 ng-repeat="question in ctrl.quiz.questions" 
-                ng-bind="question.description" 
+                ng-bind-html="::question.description | trust_html" 
                 yt-translate-x="(-(ctrl.activeQuestionIndex * 100)) + '%'">
-                  How can a strong visual style help you build a fan following?
+                  
             </div>
         </div>
         
@@ -29,39 +33,38 @@
       
       <div class="yt-quiz-question-list separator-left">
         
-        <div ng-repeat="question in ctrl.quiz.questions" class="yt-quiz-question" yt-translate-x="(-(ctrl.activeQuestionIndex * 100)) + '%'" ng-init="outer = $index">
+        <div ng-repeat="question in ctrl.quiz.questions" 
+            class="yt-quiz-question" 
+            yt-translate-x="(-(ctrl.activeQuestionIndex * 100)) + '%'" 
+            ng-init="outer = $index; first = $first; last = $last;">
             <div ng-repeat="answer in question.answers" class="pad-bottom-short">
                 <input class="combo" id="q{{outer}}a{{$index}}"  type="radio" ng-model="ctrl.userData.quizAnswers[question.id]" value="{{$index}}">
-                <label class="combo" for="q{{outer}}a{{$index}}">{{answer.content}}</label><br/>
+                <label class="combo" for="q{{outer}}a{{$index}}" ng-bind-html="::answer.content | trust_html"></label><br/>
                 
             </div>
-            <div ng-show="ctrl.isAnswerCorrect(question)">
-              <strong class="yt-quiz-correct-title">{{ question.correctAnswerMainTitle }}</strong>
-		      <div class="yt-quiz-correct-description">{{ question.correctAnswerDescription }}</div>
+            <div class="answer correct" ng-show="ctrl.isAnswerCorrect(question)">
+              <strong class="yt-quiz-correct-title" ng-bind="::question.correctAnswerMainTitle"></strong>
+		      <div class="yt-quiz-correct-description" ng-bind="::question.correctAnswerDescription"></div>
             </div>
-            <div ng-show="ctrl.isAnswerIncorrect(question)"> 
-                <strong class="yt-quiz-incorrect-title">{{ question.incorrectAnswerMainTitle }}</strong>
-				<div class="yt-quiz-incorrect-description">{{ question.incorrectAnswerDescription }}</div>
+            <div class="answer incorrect" ng-show="ctrl.isAnswerIncorrect(question)"> 
+                <strong class="yt-quiz-incorrect-title" ng-bind="::question.incorrectAnswerMainTitle"></strong>
+				<div class="yt-quiz-incorrect-description" ng-bind="::question.incorrectAnswerDescription"></div>
 			</div>
-            
-        </div>
-        
-      </div>
-      
-      
-      
-      
-      
-      
-      
-      
-      
-	</div>
+            <div class="quiz-nav text-center">
+                <a ng-if="!first" class="btn" href="#" ng-click="ctrl.activateQuestion(outer - 1)">
+                    <i class="fa fa-chevron-left"></i>
+                 </a>
+                <a ng-if="!last" class="btn" href="#" ng-click="ctrl.activateQuestion(outer + 1)">
+                    <i class="fa fa-chevron-right"></i>
 
-	
-	
-	
-	<div class="quiz">
-		<h1>Quiz</h1>
+                </a>
+                <a ng-if="last" class="btn" href="#" ng-click="ctrl.submit()">
+                    Submit &nbsp; <i class="fa fa-arrow-right"></i>
+
+
+                </a>
+            </div>
+        </div>
+      </div>
 	</div>
 </div>
