--- a/src/app/lesson-module/quiz/quiz.scss
+++ b/src/app/lesson-module/quiz/quiz.scss
@@ -3,9 +3,12 @@
 }
 
 .quiz {
-	min-height: 270px;
+	min-height: 400px;
 	font-family: "Lora", serif;
-    
+    background: #fff;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+    max-width: 1100px;
+    margin: 30px auto;
     ol {
         list-style: none;
     }
@@ -68,6 +71,9 @@
             display: none;
         }
     }
+    &.correct {
+        background: #2ecc71;
+    }
 }
 
 
@@ -75,7 +81,9 @@
 .correct {
     .correct-icon {
         display: block;
+        
     }
+    
     
 }
 
@@ -127,7 +135,8 @@
     font-weight: 300;
     line-height: 44px;
     padding-left: 10px;
-    color: #bf4387;
+    color: $primary-red;
+    font-family: "Montserrat", sans-serif;
 }
 
 .yt-quiz-question-text-list {
@@ -152,6 +161,7 @@
     vertical-align: top;
     white-space: normal;
     width: 100%;
+    font-size: 15px;
 }
 
 /* End question text section */
@@ -185,13 +195,29 @@
 
 .yt-quiz-question label {
     cursor: pointer;
+    font-size: 15px;
+    background-color: #fff;
+    border-color: #fff;
+    
 }
 
 
+.answer {
+    font-family: "Lato", sans-serif;
+}
 
+.correct {
+    color: #27ae60;
+    
+}
 
+.incorrect {
+    color: $primary-red;
+}
 
-
+.quiz-nav {
+    margin: 20px auto;
+}
 
 
 
