--- a/src/app/lessons/lessons.html
+++ b/src/app/lessons/lessons.html
@@ -1,44 +1,17 @@
 <div class="container">
-<div class="row">
-	<div class="col-md-7 center-block video-frame" style="float:none;"> 
-	<div class="embed-responsive embed-responsive-16by9 embed">
-  		<iframe class="embed-responsive-item" ng-src="{{lesson.info.youtube}}"></iframe>
-	</div>
-	</div>
-</div>
-</div>
-
-
-<div class="container-fluid lesson-details video-page" id="lesson-details">
-		<div class="container">
-		<div class="row head-row">
-			<div class="col-md-8 underline">
-				<h1>
-					<i class="fa fa-chevron-circle-left" style="font-size: 20px;color: #CACACA; margin-right: 5px"></i>
-					<span style="font-size: 25px; font-weight: 700;color: #B41734; margin-right: 5px;">1.2</span>
-					<span>{{lesson.info.title}}</span>
-					<i class="fa fa-chevron-circle-right" style="font-size: 20px;color: #CACACA; margin-left: 5px;"></i>
-				</h1>
-			</div>
-			<div class="col-md-4 underline" style="position: relative;min-height: 70px;">
-				<div class="btn-group" role="group" aria-label="..." style="position: absolute; bottom: 0; right:0;">
-					<button type="button" class="btn btn-default" style="border: none; border-bottom: 3px solid #B41734;border-radius: 0;background-color: #F7F7F7;">
-						<i class="fa fa-film" style="color: #B41734; font-size: 25px;"></i>
-					</button>
-					<a ng-href="{{'http://localhost:3000/courses/javaee_jaxrs/lessons/introduction/text'}}" type="button" class="btn btn-default" style="border: none;background-color: #F7F7F7;">Manuscript</a>
-					<button type="button" class="btn btn-default" style="border: none;background-color: #F7F7F7;">Challenges</button>
-				</div>
+	<div class="row">
+		<div class="col-md-7 center-block video-frame" style="float:none;">
+			<div class="embed-responsive embed-responsive-16by9 embed">
+				<iframe class="embed-responsive-item" ng-src="{{lesson.info.youtube}}"></iframe>
 			</div>
 		</div>
-		<p style="font-size: 18px; font-family: 'Lato'; margin-top: 15px; max-width: 70em;color: #64686a;">{{lesson.info.description}}</p>
-		</div>
 	</div>
-	
-	</div>
-	
-	
-	
-	
-	
-	
+</div>
 
+<div style="position: absolute; bottom: 0;display: block;width: 100%">
+	
+	<lesson-section></lesson-section>
+	
+</div>
+
+</div>
