Passing lesson objects to the right places. Hooked in with actual API.

--- a/src/app/components/lesson-section/lesson-section.html
+++ b/src/app/components/lesson-section/lesson-section.html
@@ -36,7 +36,7 @@
 		<div class="row">
 			<div class="col-md-8 padded" style="padding-left: 45px; border-right: 1px solid #aaa;">
 				<p class="link-subtitle">
-					<a href="#" ng-bind="::ctrl.lesson.courseCode" ng-href="/courses/{{::ctrl.lesson.courseCode}}"></a>
+					<a href="#" ng-bind="::ctrl.lesson.courseName" ng-href="/courses/{{::ctrl.lesson.courseCode}}"></a>
 				</p>
 				<p style="font-size: 18px; font-family: 'Lato'; margin-top: 15px; color: #64686a;">{{ctrl.lesson.description}}</p>
 			</div>
