--- a/src/app/lesson-module/lesson-module.html
+++ b/src/app/lesson-module/lesson-module.html
@@ -1,4 +1,4 @@
-	<lesson-section></lesson-section>
+	<lesson-section lesson="lessonModule.info"></lesson-section>
 	<manuscript ng-if="::lessonModule.isText" content="lessonModule.content"></manuscript>
 	<quiz ng-if="::lessonModule.isQuiz" content="lessonModule.content"></quiz>
 	
