--- a/src/app/lessons/lessons.html
+++ b/src/app/lessons/lessons.html
@@ -10,7 +10,7 @@
 
 <div style="position: absolute; bottom: 0;display: block;width: 100%">
 	
-	<lesson-section></lesson-section>
+	<lesson-section lesson="lesson.info"></lesson-section>
 	
 </div>
 
