--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -6,7 +6,7 @@
           <hr class="separator heading-separator"/>
           <p style="font-weight: 700; font-size: 27px; color: rgba(192, 57, 43, 1); margin-top: 60px;" >Learn and advance your coding skills online.</p>
           <p style="font-weight: 400">Learn Java and Javascript technologies<br/> through hundreds of training videos <br/>and learning material.</p>
-          <a class="btn" href="#">BROWSE COURSES</a>
+          <a class="btn" ui-sref="courses">BROWSE COURSES</a>
 
           <hr class="separator"/>
         </div>
