--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -4,22 +4,25 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 	<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand"><span style="font-family: 'Monaco';">java<span style="color: #333333"  >Brains</span></a>{{ hideLogo }}
+      <a href="/" class="navbar-brand" ng-if="vm.currentUrl !== '/'">
+      <span style="font-family: 'Monaco';">java<span style="color: #333333"  >Brains</span>
+      </a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active">
+        <li 
+          ng-class= "{'active' : vm.isTopicsUrl}">
           <a href="/topics">TOPICS</a>
         </li>
-        <li>
+        <li
+          ng-class= "{'active' : vm.isCoursesUrl}">
           <a href="/courses">COURSES</a>
         </li>
-        <li>
-          <a href="#">LOGIN</a>
+        <li
+          ng-class= "{'active' : vm.isAboutUrl}">
+          <a href="#">ABOUT</a>
         </li>
-        <li>
-          <a href="#">SIGN UP</a>
-        </li>
+        
       </ul>
     </div>
   </div>
