--- a/src/app/lesson-module/manuscript/manuscript.scss
+++ b/src/app/lesson-module/manuscript/manuscript.scss
@@ -1,12 +1,19 @@
 
 .manuscript {
-	max-width: 35em;
+	max-width: 42em;
 	margin: auto;
 	font-family: "Lora", serif;
 	font-size: 20px;
+	line-height: 1.65em;
+	color: #54585A;
 	h1, h2, h3 {
 		color: 	$primary-red;
 		font-weight: 700;
 		font-family: "Josefin Sans", sans-serif;
+		margin-top: 50px;
+		font-size: 35px;
+	}
+	p {
+		margin-top: 25px;
 	}
 }
