--- a/src/app/lessons/lessons.html
+++ b/src/app/lessons/lessons.html
@@ -1,14 +1,28 @@
 <div class="container">
 	<div class="row">
+		<div class="col-md-1 pull-left">
+			<a class="btn" ng-href="/courses/{{::lesson.info.courseCode}}">
+                    <i class="fa fa-level-up"></i>
+
+                </a>
+		</div>
+		<div class="col-md-1 pull-right">
+			<a ng-if="!last" class="btn ng-scope" href="#" ng-click="ctrl.activateQuestion(outer + 1)">
+                    <i class="fa fa-map-o"></i>
+
+                </a>
+		</div>
+			
 		<div class="col-md-7 center-block video-frame" style="float:none;">
 			<div class="embed-responsive embed-responsive-16by9 embed">
 				<iframe class="embed-responsive-item" ng-src="{{lesson.info.youtube}}"></iframe>
 			</div>
 		</div>
+		
 	</div>
 </div>
 
-<div style="position: absolute; bottom: 0;display: block;width: 100%">
+<div style="width: 100%; margin-top: 50px;">
 	
 	<lesson-section lesson="lesson.info"></lesson-section>
 	
