Some styling tweaks

--- a/src/app/components/lesson-section/lesson-section.html
+++ b/src/app/components/lesson-section/lesson-section.html
@@ -34,11 +34,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8 padded" style="padding-left: 45px; border-right: 1px solid #aaa;">
+			<div class="col-md-8 padded" style="padding-left: 45px; padding-top: 10px; border-right: 1px solid #aaa;">
 				<p class="link-subtitle">
 					<a href="#" ng-bind="::ctrl.lesson.courseName" ng-href="/courses/{{::ctrl.lesson.courseCode}}"></a>
 				</p>
-				<p style="font-size: 18px; font-family: 'Lato'; margin-top: 15px; color: #64686a;">{{ctrl.lesson.description}}</p>
+				<p style="font-size: 17px; font-family: 'Lato'; margin-top: 10px; color: #64686a;">{{ctrl.lesson.description}}</p>
 			</div>
 			<!--
 			<div class="col-md-4 padded" >
