--- a/src/app/courses/courses.scss
+++ b/src/app/courses/courses.scss
@@ -41,6 +41,8 @@
     font-size: 14px;
     max-width: 90%;
     color: #666666;
+    margin-top: 10px;
+    margin-bottom: 30px;
   }
   .labels {
     font-family: "Lato", sans-serif;
