More cleanup and misc changes

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -20,7 +20,7 @@
         </li>
         <li
           ng-class= "{'active' : vm.isAboutUrl}">
-          <a href="#">ABOUT</a>
+          <a href="/about">ABOUT</a>
         </li>
         
       </ul>
