--- a/src/app/topics/topics.scss
+++ b/src/app/topics/topics.scss
@@ -37,8 +37,8 @@
     
   }
   p.tile-description {
-    font-family: "PT Serif", serif;
-    color: $alt-text-color;
+    font-family: "Lato", sans-serif;
+    color: #666;
     font-size: 16px;
     max-width: 90%;
   }
