--- a/src/app/lesson-module/lesson-module.html
+++ b/src/app/lesson-module/lesson-module.html
@@ -1,4 +1,6 @@
+	<div style="width: 100%; background-color: #FFF; box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);">
 	<lesson-section lesson="lessonModule.info"></lesson-section>
+	</div>
 	<manuscript ng-if="::lessonModule.isText" content="lessonModule.content"></manuscript>
 	<quiz ng-if="::lessonModule.isQuiz" content="lessonModule.content"></quiz>
 	
