--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -9,6 +9,7 @@
                         <br/> through hundreds of training videos
                         <br/>and learning material.</p>
                   <a class="btn" ui-sref="courses">BROWSE COURSES</a>
+                  <a class="btn" ng-href="/courses/spring_core/lessons/Understanding-Dependency-Injection">BROWSE COURSES</a>
 
                   <hr class="separator" />
             </div>
