--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -20,6 +20,17 @@ $plain-background: #F7F7F7;
 /* $primary-red: #C0392B; */
 $primary-red: #B41734;
 
+$unit1-dark: #3498DB;
+$unit1-light: #71B7E6;
+
+$unit2-dark: #16a085;
+$unit2-light: #45B39D;
+
+$unit3-dark: #e74c3c;
+$unit3-light: #EC7063;
+
+
+
 html {
    height: 100%;
    min-width: 1000px;
