--- a/src/app/lessons/lessons.html
+++ b/src/app/lessons/lessons.html
@@ -17,14 +17,14 @@
 			
 		<div class="col-md-7 center-block video-frame" style="float:none;">
 			<div class="embed-responsive embed-responsive-16by9 embed">
-				<iframe class="embed-responsive-item" ng-src="{{lesson.info.youtube}}"></iframe>
+				<iframe class="embed-responsive-item" ng-src="{{lesson.info.youtube}}" allowfullscreen></iframe>
 			</div>
 		</div>
 		
 	</div>
 </div>
 
-<div style="width: 100%; margin-top: 50px;">
+<div style="width: 100%; margin-top: 50px; background-color: #FFF; box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);">
 	
 	<lesson-section lesson="lesson.info"></lesson-section>
 	
