--- a/src/app/components/lesson-section/lesson-section.scss
+++ b/src/app/components/lesson-section/lesson-section.scss
@@ -102,37 +102,49 @@
 	}
 	
 	.lesson-item.unit1 {
-		background-color: rgba(52, 152, 219,0.5);
+		background-color: $unit1-light;
 		&.done {
-			background-color: rgba(52, 152, 219,1.0);
+			background-color: $unit1-dark;
 		}
 		i {
 			font-size:30px;
-			color: rgba(52, 152, 219,1.0);
+			color: $unit1-dark;
 			
 		}
 	}
 	
 	.lesson-item.unit2 {
-		background-color: rgba(22, 160, 133,0.5);
+		background-color: $unit2-light;
 		&.done {
-			background-color: rgba(22, 160, 133,1.0);
+			background-color: $unit2-dark;
 		}
 		i {
 			font-size:30px;
-			color: rgba(22, 160, 133,1.0);
+			color: $unit2-dark;
 			
 		}
 	}
 	
 	.lesson-item.unit3 {
-		background-color: rgba(231, 76, 60,0.5);
+		background-color: $unit3-light;
 		&.done {
-			background-color: rgba(231, 76, 60,1.0);
+			background-color: $unit3-dark;
 		}
 		i {
 			font-size:30px;
-			color: rgba(231, 76, 60,1.0);
+			color: $unit3-dark;
+			
+		}
+	}
+	
+		.lesson-item.unit4 {
+		background-color: $unit4-light;
+		&.done {
+			background-color: $unit4-dark;
+		}
+		i {
+			font-size:30px;
+			color: $unit4-dark;
 			
 		}
 	}
