--- a/src/app/components/lesson-timeline/lesson-timeline.html
+++ b/src/app/components/lesson-timeline/lesson-timeline.html
@@ -1,5 +1,46 @@
-<div class="container-fluid lesson-menu unit{{unit.unitNumber}}"  ng-repeat="unit in ctrl.course.units" ng-if="showLessonsFor === unit.unitNumber">
-  <!-- ng-if="ctrl.showLessonsFor === unit.unitNumber" -->
+<!-- <div ng-if="showLessonsFor === unit.unitNumber"> -->
+<carousel interval="0" no-wrap="true">
+  <slide ng-repeat="unit in ctrl.course.units" class="lesson-menu unit{{unit.unitNumber}}"> <!-- active="showLessons.unit === unit.unitNumber" --> 
+
+    <div class="container text-left" style="max-width: 1000px;">
+      <i class="fa fa-times clickable pull-right" style="font-size: 30px;margin:20px;" ng-click="showLessons.enablePanel = false"></i>
+      <div class="row">
+        <h1>Unit {{unit.unitNumber}} &nbsp; <small style="color: #FFF" ng-bind="::unit.unitName"></small> </h1>
+        <hr/>
+        
+      </div>
+      <div class="row">
+        
+        <ul class="fa-ul lesson-list">
+          <li  ng-repeat="lesson in unit.lessons">
+            <a ui-sref="lesson({'courseName': ctrl.course.code, 'lessonName': lesson.permalinkName})">
+            <i class="fa-li fa fa-play"></i> 
+             <span style="opacity: 0.7" ng-bind="::$index + 1"></span> &nbsp; <span ng-bind="::lesson.title"></span>
+            </a> 
+          </li> 
+        </ul>
+
+          <!--
+          <div href="#" class="lesson-item list-group-item" ng-repeat="lesson in unit.lessons">
+            <h4 class="list-group-item-heading">Lesson {{$index + 1}}</h4>
+            <p class="list-group-item-text">{{ lesson.title }}</p>
+          </div>
+          -->
+
+
+        
+      </div>
+    </div>
+  </slide>
+</carousel>
+
+
+
+
+<!--
+
+<div class="lesson-menu unit{{unit.unitNumber}}"  ng-repeat="unit in ctrl.course.units" ng-if="showLessonsFor === unit.unitNumber">
+  
   
   <div class="container">
     <div class="row">
@@ -17,3 +58,4 @@
     </div>
   </div>
 </div>
+-->
